@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Added separate compilation mode customization points. #331</p>
+</li>
+<li>
 <p>Added destructor comment for basic_endpoint and client. #330</p>
 </li>
 <li>
